Thay thương thức getFirst thành get(0). Vì 1 số JSK không tồn tại phương thức getFirst().